fix link alignment

--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ h3 {
 
 .ul-list {
     display: flex;
-    gap: 16px;
+    gap: 10px;
     padding: 10px 10px;
     list-style-type: none;
     color: #0f83ff;
